Fix text overflow on mobile

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -116,7 +116,7 @@ footer
                 font-family: 'MyBoldFont', sans-serif
                 display: inline-block
                 color: black
-                @media (max-width: 1024px) and (orientation: landscape)
+                @media (max-width: 1024px) and (orientation: landscape), (max-width: 400px) and (orientation: portrait)
                     display: none
         .photo-metadata-wrapper
             margin-left: 0
